Domain object and key/reference.