@@ -31,7 +31,6 @@
 				<version>3.10.1</version>
 				<configuration>
 					<release>17</release>
-					<compilerArgs>--enable-preview</compilerArgs>
 					<encoding>UTF-8</encoding>
 					<source>17</source>
 					<target>17</target>
